maze.lessons.maze.island.IslandMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
def KeepHandOnSideWall() {
^Escaper:15: error: expected class or object definition
def talahaine() {
^